# rdma-inverted-index

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
example/: example-queries.txt
rdma-library/: CMakeLists.txt  IBVerbsConfig.cmake  README.md
scripts/: check_hugepages.sh  compile_all.py  create_hugepages.sh  enable_hyperthreading.sh  index_from_documents.py  mix_queries.py  requirements.txt  split_inserts.py  uniform.py
scripts/ssb/: create_tables.sh  generate_ssb_queries.py  ssb.py
scripts/twitter/: create_popular_queries.py  extract.py  most_popular_lists.py  reassign_ids.py
src/data_processing/: CMakeLists.txt
src/data_processing/partitioner/: block_based.hh  document_based.hh  partitioner.cc  partitioning_strategies.hh  term_based.hh
src/data_processing/serializer/: deserializer.hh  serialize.cc
src/data_processing/update_queries/: create_documents.cc  draw_documents_and_create_index.cc
src/index/: compute_node.hh  compute_node_impl.hh  configuration.hh  constants.hh  core_assignment.hh  core_assignment_impl.hh  crc.hh  memory_node.hh  operations.hh  shared_context.hh  statistics.hh
src/index/block_based/: block_operations.hh  compute_thread.hh  main.cc  query_handler.hh  read_buffer.hh  remote_pointer.hh  wr_ids.hh
src/index/block_based_dynamic/: compute_thread.hh  free_list.hh  free_list_buffers.hh  insert.hh  main.cc  query_handler.hh  remote_pointer.hh  verify.hh
src/index/document_based/: compute_thread.hh  main.cc  query_handler.hh  remote_pointer.hh
src/index/query/: distribute_queries.hh  query.hh
src/index/term_based/: compute_thread.hh  main.cc  query_handler.hh  remote_pointer.hh
src/timing/: timing.cc  timing.hh
